--- a/content/en/cad/java/16-12-1.md
+++ b/content/en/cad/java/16-12-1.md
@@ -9,7 +9,7 @@ weight: 00	#rem
 
 # CAD File Conversion API for Java
 
-[![banner](/res_repo/img/compress/aspose_cad-for-java-banner.png)](./)
+[![banner](/../../aspose_cad-for-java-banner.png)](./)
 [Product Page](https://products.aspose.com/cad/java) | [Docs](https://docs.aspose.com/cad/java/) | [Demos](https://products.aspose.app/cad/family) | [API Reference](https://apireference.aspose.com/cad/java) | [Examples](https://github.com/aspose-cad/Aspose.CAD-for-Java) | [Blog](https://blog.aspose.com/category/cad/) | [Search](https://search.aspose.com/) | [Free Support](https://forum.aspose.com/c/cad) | [Temporary License](https://purchase.aspose.com/temporary-license)
 
 [Aspose.CAD for Java](https://products.aspose.com/cad/java) allows developers to convert AutoCAD DWG and DXF files to PDF and Raster images. It is a native API and does not require AutoCAD or any other software to be installed. You can also convert the selected layers and layouts from the AutoCAD files. The conversion to PDF and Raster images is of very high quality.
