--- a/content/en/cad/java/23-4.md
+++ b/content/en/cad/java/23-4.md
@@ -9,7 +9,7 @@ publishDate: "2023-09-13T23:12:50+00:00"
 
 # CAD File Conversion API for Java
 
-[![banner](/res_repo/img/compress/aspose_cad-for-java-banner.png)](./)
+[![banner](../../aspose_cad-for-java-banner.png)](./)
 
 
 [Product Page](https://products.aspose.com/cad/java) | [Docs](https://docs.aspose.com/cad/java/) | [Demos](https://products.aspose.app/cad/family) | [API Reference](https://apireference.aspose.com/cad/java) | [Examples](https://github.com/aspose-cad/Aspose.CAD-for-Java) | [Blog](https://blog.aspose.com/category/cad/) | [Search](https://search.aspose.com/) | [Free Support](https://forum.aspose.com/c/cad) | [Temporary License](https://purchase.aspose.com/temporary-license)
