--- a/content/en/cad/java/24-1.md
+++ b/content/en/cad/java/24-1.md
@@ -1,5 +1,5 @@
 ---
-title: Aspose.CAD 24.1 | AutoCAD Processing & Conversion Java API
+title: Aspose.CAD 24.1 | CAD and BIM Processing & Conversion Java API SDK
 description: Java class library to render, edit, report & convert AutoCAD drawings within your Apps. Supports 3D solids, conic, sphere, torus, cylinder, box, & wedge, etc.
 layout: package
 type: repository
@@ -7,14 +7,13 @@ weight: 00	#rem
 publishDate: "2024-04-26T17:11:03+00:00"
 ---
 
-# CAD File Conversion API for Java
+# CAD and Files SDK as Conversion & Export API for Java
 
 [![banner](../aspose_cad-for-java-banner.png)](./)
-
-
 [Product Page](https://products.aspose.com/cad/java) | [Docs](https://docs.aspose.com/cad/java/) | [Demos](https://products.aspose.app/cad/family) | [API Reference](https://apireference.aspose.com/cad/java) | [Examples](https://github.com/aspose-cad/Aspose.CAD-for-Java) | [Blog](https://blog.aspose.com/category/cad/) | [Search](https://search.aspose.com/) | [Free Support](https://forum.aspose.com/c/cad) | [Temporary License](https://purchase.aspose.com/temporary-license)
 
-[Aspose.CAD for Java](https://products.aspose.com/cad/java) allows developers to convert AutoCAD DWG and DXF files to PDF and Raster images. It is a native API and does not require AutoCAD or any other software to be installed. You can also convert the selected layers and layouts from the AutoCAD files. The conversion to PDF and Raster images is of very high quality.
+[Aspose.CAD for Java](https://products.aspose.com/cad/java) allows developers to export and convert CAD and BIM drawing files like DWG, DXF, DWT, DAE and others to PDF, Vector and Raster images. It is a native API and does not require AutoCAD or any other software to be installed. You can also convert the selected layers and layouts from the CAD files. The conversion to PDF and Raster images is of very high quality.
+Please read [release notes for Aspose.CAD Java 24.1](https://releases.aspose.com/cad/java/release-notes/2024/aspose-cad-for-java-24-1-release-notes/) to know what is improved on the latest version.
 
 ## CAD File Processing
 
@@ -28,18 +27,20 @@ publishDate: "2024-04-26T17:11:03+00:00"
 
 **AutoCAD:** DWG, DWT, DWF, DWXF, IFC, PLT\
 **MicroStation:** DGN\
-**The Advanced Visualizer:** OBJ\
-**Other:** STL, IGES, CFF2
+**Others:** STL, IGES, CF2, DXB, SVG, CF2
 
 ## Save CAD As
 
 **Fixed Layout:** PDF\
-**Raster Images:** PNG, BMP, TIFF, JPEG, GIF
+**Raster Images:** PNG, BMP, TIFF, JPEG, GIF, PSD, DICOM, WEBP\
+**Vector Images** WMF, EMF, SVG
 
 ## Read & Write
 
-**CAD:** DXF\
-(Write features is partially supported.)
+**CAD:** DXF, DWG, DWT\
+**The Advanced Visualizer:** OBJ\
+**Others**: STP, OBJ, FBX, U3D, DWF, DWFx
+(Write features are partially supported.)
 
 ## Supported Environments
 
@@ -50,7 +51,7 @@ publishDate: "2024-04-26T17:11:03+00:00"
 
 ## Get Started
 
-Aspose.CAD Java APIs are hosted at the [Aspose.CAD Repository](https://releases.aspose.com/java/repo/com/aspose/aspose-cad/). You can easily use Aspose.BarCode for Java API directly in your Maven projects with simple configurations. For the detailed instructions please visit [Installing Aspose.CAD for Java from Maven Repository](https://docs.aspose.com/cad/java/installation/) documentation page.
+Aspose.CAD Java APIs are hosted at the [Aspose Repository](https://releases.aspose.com/cad/java/). You can easily use Aspose.CAD for Java API directly in your Maven projects with simple configurations. For the detailed instructions please visit [Installing Aspose.CAD for Java from Maven Repository](https://docs.aspose.com/cad/java/installation/) documentation page.
 
 ## Convert DXF Drawing to PNG Format
 
