Aspose.CAD Product Family Missing Release Pages
Added the missing release pages after updating the front matter to fix various issues.

--- a/content/en/cad/java/23-10.md
+++ b/content/en/cad/java/23-10.md
@@ -3,7 +3,7 @@ title: Aspose.CAD Java 23.10 | CAD and BIM Processing Conversion Java API SDK
 linktitle: "Aspose.CAD for Java"
 description: Java class library to render, edit, report & convert CAD and BIM drawings within your Apps. Supports 3D solids, conic, sphere, torus, cylinder, box, & wedge, etc.
 layout: package
-weight: 02	#rem
+type: repository
 forumLink: https://forum.aspose.com/c/cad/19
 productLink: https://products.aspose.com/cad/java/
 releaseNotesLink: https://releases.aspose.com/cad/java/release-notes/
