--- a/content/en/cad/java/23-9.md
+++ b/content/en/cad/java/23-9.md
@@ -3,13 +3,13 @@ title: Aspose.CAD Java 23.9 | CAD and BIM Processing Conversion Java API SDK
 linktitle: "Aspose.CAD for Java"
 description: Java class library to render, edit, report & convert CAD and BIM drawings within your Apps. Supports 3D solids, conic, sphere, torus, cylinder, box, & wedge, etc.
 layout: package
-weight: 02	#rem
+type: repository
+weight: 00	#rem
 forumLink: https://forum.aspose.com/c/cad/19
 productLink: https://products.aspose.com/cad/java/
 releaseNotesLink: https://releases.aspose.com/cad/java/release-notes/
 dataFolder: aspose_cad
 tags: ["Aspose Total", "Aspose CAD", "Aspose Java API", "cad java library", "cad java class", "DWG", "DXF", "DGN", "IFC", "IGES", "STL", "DWT", "PLT", "DWF", "DWFx", "CF2", "OBJ", "PDF", "TIFF", "JPEG", "PNG", "GIF", "BMP", "Maven", "Windows", "Linux", "Mac", "J2SE", "drawing", "cad drawing", "raster image", "export 3D", "autocad", "cad layout", "mesh model", "ATTRIB", "MTEXT", "3D solids", "conic", "sphere", "torus", "cylinder", "box", "wedge", "wired models", "3D faces", "Unix"]
-weight: 00	#rem
 publishDate: "2023-11-28T18:06:07+00:00"
 ---
 
