Updated the pages related to Aspose.ZIP for Java 24.6.

--- a/content/en/zip/java/24-6.md
+++ b/content/en/zip/java/24-6.md
@@ -27,11 +27,10 @@ Aspose.ZIP for Java class library allows your Java applications to compress/deco
 - Append more files to an existing zipped archive.
 - Use `Gzip` or `Bzip2` to pack files & folders into a `TAR` archive.
 - Supports `LZMA` or `LZMA2` compression & optional encryption to create `7z` archives.
-- Create self-extracting compressed archives.
 
 ### Read & Write ZIP Formats
 
-ZIP (Coming soon: 7z, TAR, GZIP, BZ2)
+ZIP, 7z, TAR, GZIP, BZ2
 
 ## Supported Environments
 
